--- a/handbook/docs/05、网关配置/5.1、采集设备.mdx
+++ b/handbook/docs/05、网关配置/5.1、采集设备.mdx
@@ -3,6 +3,11 @@ id: collectdevice
 title: 采集设备配置说明
 sidebar_label: 5.1、采集设备
 ---
+:::tip `配置须知`
+
+ 更改采集设备/变量/上传设备/插件等，需要重启线程（网关状态-运行状态-全部重启/单个采集设备重启）
+
+:::
 
 ### （一）添加/修改采集设备
 
@@ -67,4 +72,11 @@ sidebar_label: 5.1、采集设备
 ![](/img/collectdevice6.png)
 
  点击上传，等待导入完成，完成后自动退出弹窗，否则提示错误
+
+ 
+#### 导出
+
+![](/img/collectdevice7.png)
+
+ 点击导出，等待导出完成，自动下载文件
 
