--- a/handbook/docs/05、网关配置/5.2、变量.mdx
+++ b/handbook/docs/05、网关配置/5.2、变量.mdx
@@ -3,6 +3,121 @@ id: variable
 title: 变量配置说明
 sidebar_label: 5.2、变量
 ---
+:::tip `配置须知`
+
+ 更改采集设备/变量/上传设备/插件等，需要重启线程（网关状态-运行状态-全部重启/单个采集设备重启）
+
+:::
+
+### （一）添加/修改变量
+
+![](/img/variable1.png)
+<details>
+<summary>变量基本属性</summary>
+<div>
+
+#### 名称
+当前采集设备名称，全局唯一(采集设备)
+
+#### 描述
+当前采集设备描述
+
+#### 设备
+当前变量选择的采集设备名称，通过选择器选择对应设备名称设置
+
+#### 变量地址
+对于不同的驱动,变量地址配置不相同，查看第六节，找到对应的驱动说明
+
+#### 执行间隔
+读取时间间隔
+
+#### 初始值
+变量初始值
+
+#### 读写权限
+读写/只写/只读
+
+#### 数据类型
+对应的数据类型，注意除了特殊驱动，否则不应该选择object
+
+#### 读取表达式
+  支持多种运算符，原始值的代码为raw，具体可查看 [ExpressionEvaluator WiKi](https://github.com/codingseb/ExpressionEvaluator) 
+  下面走个示例：
+  ```csharp
+
+    raw*10+3
+
+   //原始值raw为8，输出实时值83
+
+  ```
+#### 写入表达式
+
+同读取表达式，在写入值时转化
+  
+  下面走个示例：
+  ```csharp
+    
+    raw*10  //读取表达式
+    
+    raw/10 //写入表达式
+
+   //PLC原始值为22，读取实时值为220，写入值为230时，会下发23到PLC
+
+
+  ```
+
+#### 特殊方法
+
+对于不同的驱动,特殊方法配置不相同，查看第六节，找到对应的驱动说明
+
+
+
+</div>
+</details>
+
+<details>
+<summary>报警属性</summary>
+<div>
+
+
+</div>
+</details>
+
+
+
+### （二）导入导出采集设备
+
+#### 导出模板
+![](/img/collectdevice2.png)
+![](/img/collectdevice3.png)
+
+可以看到采集设备的excel模板，填入规则参考第一小节
+
+ 
+#### 导入
+
+![](/img/collectdevice4.png)
+
+弹窗选择导入的excel文件后，点击下一步进行校验
+
+![](/img/collectdevice5.png)
+
+ 根据红色字体提示，修改对应错误列字段
+
+ 全部正常时可进行下一步
+
+![](/img/collectdevice6.png)
+
+ 点击上传，等待导入完成，完成后自动退出弹窗，否则提示错误
+
+ 
+#### 导出
+
+![](/img/collectdevice7.png)
+
+ 点击导出，等待导出完成，自动下载文件
+
+
 
 ### （二）变量配置
 
