--- a/handbook/docs/05、网关配置/5.3、上传设备.mdx
+++ b/handbook/docs/05、网关配置/5.3、上传设备.mdx
@@ -3,41 +3,7 @@ id: uploaddevice
 title: 上传设备配置说明
 sidebar_label: 5.3、上传设备
 ---
+
  **上传设备配置与上传设备大致相同**
-
-### （一）添加/修改上传设备
-
-![](/img/adduploaddevice1.png)
-<details>
-<summary>设备基本属性</summary>
-<div>
-
-#### 名称
-当前上传设备名称，全局唯一(上传设备)
-
-#### 描述
-当前上传设备描述
-
-#### 设备驱动名称
-当前上传设备选择的上传驱动插件名称，通过级联选择器选择对应驱动名称设置
-
-#### 设备使能
-启动/停用上传设备
-
-#### 输出日志
-启动/停用日志输出
-
-
-</div>
-</details>
-
-<details>
-<summary>设备附加属性</summary>
-<div>
-
-  **对于不同的驱动,网关会将对应的插件配置规则保存在附加属性内**
-
-  **对应的属性描述可以查看输入框占位文本或者浮动Tips尝试理解；或者查看第六节，找到对应的驱动说明**
-
-</div>
-</details>
+  
+请查看5.1小节文章
