--- a/handbook/docs/05、网关配置/5.4、插件管理.mdx
+++ b/handbook/docs/05、网关配置/5.4、插件管理.mdx
@@ -3,4 +3,17 @@ id: plugincore
 title: 插件配置说明
 sidebar_label: 5.4、插件管理
 ---
+:::tip `配置须知`
 
+ 更改采集设备/变量/上传设备/插件等，需要重启线程（网关状态-运行状态-全部重启/单个采集设备重启）
+
+:::
+
+### （一）添加/修改采集设备
+
+![](/img/plugincore1.png)
+
+**选择主程序集（只能一个）
+**选择附属程序集（可多个）
+
+点击保存信息
