1、更新modbus client使用说明 2、更新readme

--- a/handbook/docs/05、网关配置/5.2、变量.mdx
+++ b/handbook/docs/05、网关配置/5.2、变量.mdx
@@ -118,6 +118,24 @@ sidebar_label: 5.2、变量
 </div>
 </details>
 
+
+<details>
+<summary>上传属性</summary>
+<div>
+
+
+选择上传设备，点击刷新
+
+![](/img/variable2.png)
+
+对于不同的驱动,变量上传属性配置不相同，查看第七节，找到对应的驱动说明
+
+
+</div>
+</details>
+
+
+
 ### （二）导入导出变量
 
 与设备导入导出一致，移至 [这里](http://localhost:3000/thingsgateway/docs/05%E3%80%81%E7%BD%91%E5%85%B3%E9%85%8D%E7%BD%AE/collectdevice#%E4%BA%8C%E5%AF%BC%E5%85%A5%E5%AF%BC%E5%87%BA%E9%87%87%E9%9B%86%E8%AE%BE%E5%A4%87) 查看
