--- a/handbook/docs/05、网关配置/5.2、变量.mdx
+++ b/handbook/docs/05、网关配置/5.2、变量.mdx
@@ -138,4 +138,4 @@ sidebar_label: 5.2、变量
 
 ### （二）导入导出变量
 
-与设备导入导出一致，移至 [这里](http://localhost:3000/thingsgateway/docs/05%E3%80%81%E7%BD%91%E5%85%B3%E9%85%8D%E7%BD%AE/collectdevice#%E4%BA%8C%E5%AF%BC%E5%85%A5%E5%AF%BC%E5%87%BA%E9%87%87%E9%9B%86%E8%AE%BE%E5%A4%87) 查看
+与设备导入导出一致，移至 [这里](collectdevice#二导入导出采集设备) 查看
