--- a/handbook/docs/05、网关配置/5.3、上传设备.mdx
+++ b/handbook/docs/05、网关配置/5.3、上传设备.mdx
@@ -6,6 +6,6 @@ sidebar_label: 5.3、上传设备
 
  **上传设备配置与上传设备大致相同**
 
-移至 [这里](http://localhost:3000/thingsgateway/docs/05%E3%80%81%E7%BD%91%E5%85%B3%E9%85%8D%E7%BD%AE/collectdevice) 查看
+移至 [这里](collectdevice) 查看
   
 
