--- a/handbook/docs/07、上传驱动说明/7.1、MqttServer.mdx
+++ b/handbook/docs/07、上传驱动说明/7.1、MqttServer.mdx
@@ -26,7 +26,7 @@ sidebar_label: 7.1、MqttServer
 
 :::
 
-Rpc实体规则：
+RpcJson：
 ```
 {
   "Name":"tt8",//变量名称
@@ -34,7 +34,7 @@ Rpc实体规则：
   "RpcId":"testid"//当前RpcId
 }
 ```
-Rpc返回实体规则：
+Rpc返回Json：
 ```
 {
   "RpcId":"testid", //RpcId
@@ -42,6 +42,24 @@ Rpc返回实体规则：
   "Success":true//是否成功
 }
 ```
+
+变量Json：
+```
+{
+  "RpcId":"testid", //RpcId
+  "Message":"操作成功",//返回消息
+  "Success":true//是否成功
+}
+```
+设备Json:
+```
+{
+  "RpcId":"testid", //RpcId
+  "Message":"操作成功",//返回消息
+  "Success":true//是否成功
+}
+```
+
 
 
 ### （二）变量配置
