--- a/handbook/docs/05、网关配置/5.5、其他配置.mdx
+++ b/handbook/docs/05、网关配置/5.5、其他配置.mdx
@@ -54,3 +54,5 @@ PORT=5432;DATABASE=SqlSugar4xTest;HOST=localhost;PASSWORD=haosql;USER ID=postgre
 ```
 host=localhost;port=8812;username=admin;password=quest;database=qdb;ServerCompatibilityMode=NoTypeLoading;
  ```
+QQ群里下载questdb.zip和QuestDB win启动bat文件,解压两个文件，更改QuestDB win启动bat里的对应路径，最后启动服务，重启官网就可查的历史数据
+![](/img/QuestdbSet.jpg)
