--- a/handbook/docs/06、采集驱动说明/OPCDAClient.mdx
+++ b/handbook/docs/06、采集驱动说明/OPCDAClient.mdx
@@ -3,6 +3,13 @@ id: opcda
 title: OPCDA驱动
 sidebar_label: 6.2、OPCDA驱动
 ---
+
+:::tip `OPCDA驱动注意`
+
+ 使用OPCDA插件时，需安装OPC核心库，[文件地址](https://gitee.com/diego2098/ThingsGateway/attach_files)
+
+:::
+
 ### （一）设备配置
 
 | 属性           |  说明                    | 默认值/备注|
