--- a/handbook/docs/06、采集驱动说明/Siemens.mdx
+++ b/handbook/docs/06、采集驱动说明/Siemens.mdx
@@ -21,30 +21,17 @@ sidebar_label: 6.4、Siemens驱动
 
 - 1、基本地址
 
-| 地址           | 功能码         |  说明                    |
-| ---------------| --------------|--------------------------|
-| 4xxxxx         | 03            | 读取03功能码              |
-| 3xxxxx         | 04            | 读取04功能码              |
-| 1xxxxx         | 02            | 读取02功能码              |
-| 0xxxxx         | 01            | 读取01功能码              |
-
-- 2、站号(可选)
-
-  当需要指定站号地址时可使用，举例：
-
-| 地址           |   说明                    |
+| 地址           |           说明                    |
 | ---------------| --------------------------|
-| s=2;10001         |  读取02功能码 ,设备地址为2      |
-| s=11;40001         |  读取03功能码 ,设备地址为11        |
+| Txxxxx         |       Timer寄存器,例如T100/T100.1             |
+| Cxxxxx         |       Counter寄存器,例如C100/C100.1                 |
+| AIxxxxx         |       AI寄存器,例如AI100/AI100.1               |
+| AQxxxxx         |       AQ寄存器,例如AQ100/AQ100.1                |
+| Ixxxxx         |       I寄存器,例如I100/I100.1              |
+| Qxxxxx         |       Q寄存器,例如Q100/Q100.1              |
+| Mxxxxx         |       M寄存器,例如M100/M100.1               |
+| DBxxxxx         |       DB寄存器,例如DB100.1/DB100.1.1               |
 
-- 3、写入功能码(可选)
-
-  当需要指定16/15功能码时可使用，举例：
-
-| 地址           |   说明                    |
-| ---------------| --------------------------|
-| w=15;10001         |  读取02功能码 ,写入15功能码      |
-| w=16;40001         |  读取03功能码 ,写入16功能码        |
 
 #### 变量特殊方法说明
 
