--- a/handbook/docs/01、说明.mdx
+++ b/handbook/docs/01、说明.mdx
@@ -12,9 +12,7 @@ import Tag from "@site/src/components/Tag.js";
 ThingsGateway 由作者Diego及其他贡献者开发，所有版权归作者Diego所有，程序集源代码在遵循 Apache License 2.0 的开源协议以及**附加协议**下，可**免费**供其他开发者二次开发或（商业）使用。
 
 
-# 附加协议
-
-#### 个人使用须知:
+### 个人使用须知:
 
 - 不得将程序集用作违法犯罪活动。
 - 不得将程序集单独包装售卖，申请专利等。
@@ -22,7 +20,7 @@ ThingsGateway 由作者Diego及其他贡献者开发，所有版权归作者Dieg
 
 **以上内容必须全部符合，个人使用授权才成立。**
 
-#### 二次开发须知:
+### 二次开发须知:
 
 - 不得将程序集用作违法犯罪活动。
 - 不得将程序集单独包装售卖，申请专利等。
@@ -32,13 +30,22 @@ ThingsGateway 由作者Diego及其他贡献者开发，所有版权归作者Dieg
 
 **以上内容必须全部符合，二次开发授权才成立。**
 
-#### 盈利性（商业）用途使用须知:
+### 盈利性（商业）用途使用须知:
 
 - 不得将程序集用作违法犯罪活动。
 - 不得将程序集单独包装售卖，申请专利等。
 - **不得擦除程序集所有有关作者的信息，并必须于用户可见界面（如关于）中提名。**
 
-**以上内容必须全部符合，使用授权才成立。**
+**以上内容必须全部符合，商业使用授权才成立。**
+
+
+## ThingsGatewayPro 商用许可
+
+ ThingsGatewayPro 软件框架与 ThingsGateway 一致，另包含其他定制插件。所有版权归作者Diego所有。
+
+ ThingsGatewayPro 不公开开源，需要付费购买。
+
+
 
 # 免责申明
 
