--- a/handbook/docs/02、历史更新.mdx
+++ b/handbook/docs/02、历史更新.mdx
@@ -25,12 +25,28 @@ import Tag from "@site/src/components/Tag.js";
 
   - &nbsp;<Tag>新增</Tag> 添加设备是否共用通道的选项（当IP&端口一致时或者串口号一致时生效）
 
+  
+##
+
+## v1.2.0（已发布）
+
+
+  - &nbsp;<Tag>新增</Tag> 添加OPCUAServer插件
+
+
+
+##
+
+## v1.1.0（已发布）
+
+
   - &nbsp;<Tag>新增</Tag> 添加OPCDAClient采集插件
 
   - &nbsp;<Tag>新增</Tag> 添加OPCUAClient采集插件
 
   - &nbsp;<Tag>新增</Tag> 开发串口基础框架
-  
+
+
 ##
 
 ## v1.0.0（已发布）
