--- a/handbook/docs/02、历史更新.mdx
+++ b/handbook/docs/02、历史更新.mdx
@@ -28,6 +28,12 @@ import Tag from "@site/src/components/Tag.js";
   
 ##
 
+## v1.3.0（已发布）
+
+
+  - &nbsp;<Tag>新增</Tag> 添加IotSharp插件
+
+
 ## v1.2.0（已发布）
 
 
