--- a/handbook/docs/02、历史更新.mdx
+++ b/handbook/docs/02、历史更新.mdx
@@ -23,10 +23,15 @@ import Tag from "@site/src/components/Tag.js";
 
 ## 开发计划
 
-  - &nbsp;<Tag>新增</Tag> 添加设备是否共用通道的选项（当IP&端口一致时或者串口号一致时生效）
 
   
 ##
+
+## v1.5.0（已发布）
+
+
+ - &nbsp;<Tag>新增</Tag> 添加设备是否共用通道的选项（当IP&端口一致时或者串口号一致时生效）
+ 
 
 ## v1.3.0（已发布）
 
