--- a/handbook/docs/03、支持项目与Pro版说明/3.1、支持开源项目.mdx
+++ b/handbook/docs/03、支持项目与Pro版说明/3.1、支持开源项目.mdx
@@ -14,10 +14,12 @@ sidebar_label: 3.1、支持开源项目
 
 #### 赞助名单（以下排名只按照赞助时间顺序）
 
-1. 绢 （10￥）
-2. 小蚂蚁 （18.8￥+66.66￥+16.8￥+66.66￥）
-3. *伟 （18.8￥）
-4. *碟 （20￥）
-5. *长 （6.66￥）
+|序号|名称|金额|
+|-----------|--------------|-----------------|
+|1| 绢| 10￥|
+|2| 小蚂蚁 |18.8￥+66.66￥+16.8￥+66.66￥|
+|3| *伟 |18.8￥|
+|4| *碟 |20￥|
+|5| *长 |6.66￥|
 
 
