--- a/handbook/docs/06、采集驱动说明/OPCUAClient.mdx
+++ b/handbook/docs/06、采集驱动说明/OPCUAClient.mdx
@@ -26,3 +26,13 @@ sidebar_label: 6.3、OPCUA驱动
 #### 变量特殊方法说明
 
 无特殊方法
+
+### （三）证书说明
+
+ 证书可以在windows证书管理器上查看
+ 运行 
+ ```
+ certmgr.msc
+ ```
+
+<img src={require('../../static/img/opcuaclient1.png').default} width="700" />
