--- a/handbook/docs/pluginmqttserver.mdx
+++ b/handbook/docs/pluginmqttserver.mdx
@@ -173,3 +173,21 @@ public class DeviceData
 
 
 ```
+
+## 四、RPC写入格式
+
+```
+    public class MqttRpcNameVaueWithId
+    {
+        public string RpcId { get; set; }
+        public string Key { get; set; }
+        public string Value { get; set; }
+    }
+    public class MqttRpcResult
+    {
+        public string RpcId { get; set; }
+        public string Message { get; set; }
+        public bool Success { get; set; }
+    }
+
+```
