--- a/handbook/docs/otherpage.mdx
+++ b/handbook/docs/otherpage.mdx
@@ -37,5 +37,27 @@ title: 其他页面
 ### 12、Api调试
 ![](/img/docs/otherpage-13.png)
 
- 
 
+:::tip `说明`
+
+注意，网关的WebApi接口需要登录获取Token(Bearer auth认证)
+
+![](/img/docs/webapi-1.png)
+
+如果使用网关调试页面，需要在请求头添加认证token，或者添加脚本，自动识别
+
+```
+var token=ke.response.headers["access-token"];
+console.log(token);
+if(token){
+    ke.global.setAllHeader(
+  "Authorization",
+  "Bearer " + token
+);
+}
+```
+![](/img/docs/webapi-2.png)
+![](/img/docs/webapi-3.png)
+
+
+:::
