--- a/handbook/docs/foundation/modbus.mdx
+++ b/handbook/docs/foundation/modbus.mdx
@@ -94,7 +94,72 @@ DCBA,
 </div>
 </details>
 
-## 三、ModbusClient示例代码
+## 三、变量地址格式
+
+:::tip `说明`
+
+通用格式
+
+4字节转换格式
+
+DATA=ABCD;
+
+举例：
+
+DATA=ABCD; ，代表大端格式，其中
+
+ABCD=>Big-Endian;
+
+BADC=>Big-Endian Byte Swap;
+
+CDAB=>Little-Endian Byte Swap;
+
+DCBA=>Little-Endian
+
+字符串长度：
+
+LEN=1;
+
+BCD格式：
+
+BCD=C8421;，其中有C8421;C5421;C2421;C3;Gray
+
+字符格式：
+
+TEXT=UTF8;，其中有UTF8;ASCII;Default;Unicode
+
+:::
+
+### 变量地址说明
+
+- 1、基本地址
+
+| 地址           | 功能码         |  说明                    |
+| ---------------| --------------|--------------------------|
+| 4xxxxx         | 03            | 读取03功能码              |
+| 3xxxxx         | 04            | 读取04功能码              |
+| 1xxxxx         | 02            | 读取02功能码              |
+| 0xxxxx         | 01            | 读取01功能码              |
+
+- 2、站号(可选)
+
+  当需要指定站号地址时可使用，举例：
+
+| 地址           |   说明                    |
+| ---------------| --------------------------|
+| s=2;10001         |  读取02功能码 ,设备地址为2      |
+| s=11;40001         |  读取03功能码 ,设备地址为11        |
+
+- 3、写入功能码(可选)
+
+  当需要指定16/15功能码时可使用，举例：
+
+| 地址           |   说明                    |
+| ---------------| --------------------------|
+| w=15;10001         |  读取02功能码 ,写入15功能码      |
+| w=16;40001         |  读取03功能码 ,写入16功能码        |
+
+## 四、ModbusClient示例代码
 
 ### 1、创建链路
 ```csharp
@@ -284,7 +349,7 @@ await TestAsync(modbusRtuOvrTcp);
 
 ```
 
-## 四、ModbusServer示例代码
+## 五、ModbusServer示例代码
 
 ```csharp
 private static async Task ModbusServerAsync()
