--- a/handbook/docs/upgrade.mdx
+++ b/handbook/docs/upgrade.mdx
@@ -26,6 +26,8 @@ import Tag from "@site/src/components/Tag.js";
 
 - &nbsp;<Tag>新增</Tag> 添加采集数据延时确认逻辑
 
+- &nbsp;<Tag>优化</Tag> 去除DateTimeOffset类型
+
 
 ## v2.0.0（已发布）
 
