--- a/handbook/docs/plugindlt6452007.mdx
+++ b/handbook/docs/plugindlt6452007.mdx
@@ -5,7 +5,7 @@ title: DLT645-2007采集插件
 
 ## 一、设备扩展属性
 
-### 1、DLT645_2007/OverUdp
+### 1、DLT645_2007/OverTcp
 
 | 属性           |  说明                    | 默认值/备注|
 | ---------------| --------------------------| ---|
