--- a/handbook/docs/plugindlt6452007.mdx
+++ b/handbook/docs/plugindlt6452007.mdx
@@ -69,6 +69,11 @@ TEXT=UTF8;，其中有UTF8;ASCII;Default;Unicode
 
 - 1、基本地址
 
+
+| 地址           |   说明                    |
+| ---------------| --------------------------|
+| 02010100        |  读取02010100      |
+
 参考DLT2007协议文档数据标识，可在插件源码中找到附件
 
 - 2、站号(可选)
@@ -79,12 +84,15 @@ TEXT=UTF8;，其中有UTF8;ASCII;Default;Unicode
 | ---------------| --------------------------|
 | s=111111111111;02010100        |  读取02010100 ,设备地址为111111111111      |
 
+:::tip `说明`
+
+ 注意DLT645协议中，获取的数据源都是字符串，如非特殊要求，数据类型都选择String,如果需要值类型，只能选择Double！
+
+:::
 
 ### 变量特殊方法说明
 
 无特殊方法
 
 
-### 备注说明
 
- 注意DLT645协议中，获取的数据源都是字符串，如非特殊要求，数据类型都选择String,如果需要值类型，只能选择Double！
