--- a/handbook/docs/enterprise.mdx
+++ b/handbook/docs/enterprise.mdx
@@ -63,6 +63,7 @@ ThingsGatewayPro是ThingsGateway的加强版本，**基础功能与ThingsGateway
 |4| 俞智峰 | | 2023-7-13|
 |5| 西安***物联网科技有限公司 | | 2023-7-15|
 |6| 深圳市***自动化技术有限公司 | | 2023-7-16|
+|7| 西安***信息技术有限责任公司 | | 2023-9-4|
 
 
 ## 六、购买途径
