--- a/handbook/docs/enterprise.mdx
+++ b/handbook/docs/enterprise.mdx
@@ -65,7 +65,7 @@ ThingsGatewayPro是ThingsGateway的加强版本，**基础功能与ThingsGateway
 |6| 深圳市***自动化技术有限公司 | | 2023-7-16|
 |7| 西安***信息技术有限责任公司 | | 2023-9-4|
 |8| 北京****网络科技发展有限公司 | | 2023-9-26|
-
+|9| 长沙**软件科技有限公司 | | 2023-10-16|
 
 ## 六、购买途径
 
