--- a/handbook/docs/upgrade.mdx
+++ b/handbook/docs/upgrade.mdx
@@ -18,15 +18,25 @@ import Tag from "@site/src/components/Tag.js";
 
 :::
 
-## v2.1.0（未发布）
+## v3.0.0.19（已发布）
 
-- &nbsp;<Tag>新增</Tag> 添加TDengine时序库存储
+- &nbsp;<Tag>新增</Tag> 添加TDengineDB时序库上传插件
+- &nbsp;<Tag>新增</Tag> 添加QuestDB时序库上传插件
+- &nbsp;<Tag>新增</Tag> 添加DLT645采集插件
+- &nbsp;<Tag>新增</Tag> 添加调试软件
+- &nbsp;<Tag>新增</Tag> 添加远程更新软件
 
-- &nbsp;<Tag>新增</Tag> 添加报警延时逻辑
+- &nbsp;<Tag>优化</Tag> 优化OPCUA驱动
+- &nbsp;<Tag>优化</Tag> 优化Modbus驱动
+- &nbsp;<Tag>优化</Tag> 优化S7驱动
+- &nbsp;<Tag>优化</Tag> RPC服务
+- &nbsp;<Tag>优化</Tag> 其他人性化操作
 
-- &nbsp;<Tag>新增</Tag> 添加采集数据延时确认逻辑
+- &nbsp;<Tag>调整</Tag> 内嵌TouckSocket
 
-- &nbsp;<Tag>优化</Tag> 去除DateTimeOffset类型
+- &nbsp;<Tag>修复</Tag> 内存泄露
+- &nbsp;<Tag>修复</Tag> 串口断连/拔出/断电等情况，重新连接
+- &nbsp;<Tag>修复</Tag> 其他bug
 
 
 ## v2.0.0（已发布）
