--- a/handbook/docs/upgrade.mdx
+++ b/handbook/docs/upgrade.mdx
@@ -18,6 +18,12 @@ import Tag from "@site/src/components/Tag.js";
 
 :::
 
+
+## v3.0.0.20（已发布）
+
+- &nbsp;<Tag>优化</Tag> 优化ModbusServer GC频繁的问题
+
+
 ## v3.0.0.19（已发布）
 
 - &nbsp;<Tag>新增</Tag> 添加TDengineDB时序库上传插件
