更新赞助名单

--- a/handbook/docs/donate.mdx
+++ b/handbook/docs/donate.mdx
@@ -16,9 +16,13 @@ title: 支持作者
 |序号|名称|金额|
 |-----------|--------------|-----------------|
 |1| 绢| 10￥|
-|2| 小蚂蚁 |18.8￥+66.66￥+16.8￥+66.66￥+66.66￥|
+|2| 小蚂蚁 |500+￥ + .............|
 |3| *伟 |18.8￥|
 |4| *碟 |20￥|
 |5| *长 |6.66￥|
+|6| 小黄鸭 |38.8￥|
+|7| *交 |50￥|
+|8| *洋 |200￥+50￥|
+|9| *元 |20￥|
 
 
