--- a/handbook/docs/upgrade.mdx
+++ b/handbook/docs/upgrade.mdx
@@ -17,7 +17,11 @@ import Tag from "@site/src/components/Tag.js";
 - 其余情况，每年发布一个 `主版本`。
 
 :::
+## v3.0.0.25（已发布）
 
+- &nbsp;<Tag>调整</Tag> 删除S7插件中的DstTSAP属性,用插槽号与机架号代替，更直观
+- &nbsp;<Tag>调整</Tag> OPCUAServer插件 url属性支持多个url，以逗号分割
+- &nbsp;<Tag>优化</Tag> 其他代码优化
 
 ## v3.0.0.20（已发布）
 
