--- a/handbook/docs/upgrade.mdx
+++ b/handbook/docs/upgrade.mdx
@@ -17,6 +17,13 @@ import Tag from "@site/src/components/Tag.js";
 - 其余情况，每年发布一个 `主版本`。
 
 :::
+
+## v3.0.0.27（已发布）
+
+- &nbsp;<Tag>调整</Tag> 优化设备线程启停逻辑
+- &nbsp;<Tag>新增</Tag> 添加winform(blazor) demo
+- &nbsp;<Tag>优化</Tag> 部分页面显示内容优化
+
 ## v3.0.0.25（已发布）
 
 - &nbsp;<Tag>调整</Tag> 删除S7插件中的DstTSAP属性,用插槽号与机架号代替，更直观
