--- a/doc/docs/2.mdx
+++ b/doc/docs/2.mdx
@@ -5,7 +5,7 @@ title: 产品介绍
 
 ## 产品介绍
 
-**ThingsGateway** 是c#开发的一款边缘采集网关，核心分为四大部分，贯穿一个 工业设备数据点 从采集到上传的全周期
+**ThingsGateway** 是c#开发的一款边缘采集网关，核心分为四大部分
 
 ### 通道
 
