--- a/doc/docs/104.mdx
+++ b/doc/docs/104.mdx
@@ -115,6 +115,16 @@ arraylen=2;
 |报警文本| 对应显示的报警文本 ||
 |报警约束| 动态解析的表达式 ,原始值的代码为raw，计算值为true时才能产生报警 ||
 
+:::tip `例子`
+
+数值高高报警
+
+变量值大于报警限值，并且报警约束为true或者报警约束不存在时，产生报警
+
+比如设置高高限值为1，其他默认，当变量值大于1时，产生报警
+
+:::
+
 
 ### 业务属性配置项
 <img src={require("@site/static/img/docs/添加变量2.png").default} />
