--- a/doc/docs/501.mdx
+++ b/doc/docs/501.mdx
@@ -10,17 +10,18 @@ import Highlight from '@site/src/components/Highlight.js';
 
 #### 1、Modbus地址可以只写地址0吗，一定要写成类似400001?
 
-答：
-
 按照PLC Modbus寄存器的格式，以区域号为起始字符，后续加上（寄存器地址+1）  
 所以一定要写成400001
 
 #### 2、数据如何设置小数位
-
-答：
 
 网关提供灵活的脚本式配置转换，可以在变量的读取表达式中进行配置转换 
 如果要设置小数位为2，可以填入 
 ```
 Math.Round(raw, 2)
 ```
+
+#### 3、源码打开razor文件时，不出现智能提示，有waring警告(波浪线)
+
+VS的bug导致的，可以尝试升级vs，把工程目录下的.vs文件夹已经全部的bin OR obj 删除后，重新打开解决方案
+
