--- a/doc/docs/501.mdx
+++ b/doc/docs/501.mdx
@@ -25,3 +25,19 @@ Math.Round(raw, 2)
 
 VS的bug导致的，可以尝试升级vs，把工程目录下的.vs文件夹已经全部的bin OR obj 删除后，重新打开解决方案
 
+#### 4、报警属性中的报警约束如何定义
+
+报警约束和变量表达式类似，填入脚本，返回值为true时，报警生效
+
+
+  ```csharp
+  
+  //新建testInt1,testInt2两个变量
+
+  //在testInt1的高高报警值为1，开启使能
+  //在testInt1的高高报警约束中定义testInt2>10
+
+
+  //testInt1为8,testInt2为11时，产生testInt1报警
+  //testInt1为8,testInt2为10时，不会产生testInt1报警
+  ```
