--- a/doc/docs/200.mdx
+++ b/doc/docs/200.mdx
@@ -26,6 +26,7 @@ ModbusMatser作为主站，主动采集Modbus从站协议的设备
 | Modbus协议类型         | modbusTcp/modbusRtu格式报文           | |
 | 默认站号         | 默认的mudbus站号id            | **变量可单独配置站号**   |
 | 无交互2min时断开连接         |  没有发送/收到消息 ，2分钟后断开连接             | 仅适用于TcpService链路（DTU模式）|
+| 心跳检测         |  大写16进制字符串，符合心跳内容会自动回应             | 仅适用于TcpService链路（DTU模式）|
 | 读写超时时间         | 读写超时时间                | 3000|
 | 连接超时时间         | 建立通讯链路的超时时间                | 3000|
 | 发送延时时间         | 在发送请求前的延时时间               | 0|
@@ -66,4 +67,12 @@ Modbus PLC寄存器
 | ---------------| --------------------------|
 | w=15;10001         |  读取02功能码 ,写入15功能码      |
 | w=16;40001         |  读取03功能码 ,写入16功能码        |
+
+- 3、Dtu注册(可选)
+
+  当需要指定Dtu客户端可使用，举例：
+
+| 地址           |   说明                    |
+| ---------------| --------------------------|
+| id=12;40001         |  读取03功能码 ,设备地址为默认，Dtu注册包为"12",注意是UTF8格式        |
 
