--- a/doc/docs/202.mdx
+++ b/doc/docs/202.mdx
@@ -22,6 +22,7 @@ Dlt645Master作为主站，主动采集Dlt645协议的设备
 | 属性           |  说明                    | 备注|
 | ---------------| --------------------------| ---|
 | 无交互2min时断开连接         |  没有发送/收到消息 ，2分钟后断开连接             | 仅适用于TcpService链路（DTU模式）|
+| 心跳检测         |  大写16进制字符串，符合心跳内容会自动回应             | 仅适用于TcpService链路（DTU模式）|
 | 读写超时时间         | 读写超时时间                | 3000|
 | 连接超时时间         | 建立通讯链路的超时时间                | 3000|
 | 发送延时时间         | 在发送请求前的延时时间               | 0|
@@ -53,6 +54,15 @@ Dlt645Master作为主站，主动采集Dlt645协议的设备
 | 地址           |   说明                    |
 | ---------------| --------------------------|
 | s=111111111111;02010100        |  读取02010100 ,设备地址为111111111111      |
+
+- 3、Dtu注册(可选)
+
+  当需要指定Dtu客户端可使用，举例：
+
+| 地址           |   说明                    |
+| ---------------| --------------------------|
+| id=12;02010100         |  读取02010100  ,设备地址为默认，Dtu注册包为"12",注意是UTF8格式        |
+
 
 :::tip `说明`
 
