--- a/doc/docs/20005.mdx
+++ b/doc/docs/20005.mdx
@@ -18,7 +18,7 @@ import Highlight from '@site/src/components/Highlight.js';
 
 支持多个通讯链路：Tcp/Udp/SerialPort
 
-## 二、新建
+## 二、Dlt645-2007主站
 
 1、创建Dlt645Master
 
@@ -58,6 +58,32 @@ import Highlight from '@site/src/components/Highlight.js';
 ```
 
 `02010100`是Dlt645中的地址表示方式，代表A相电压，请查看相关协议文档，可在源码附件中找到文档
+
+- 基本地址
+
+
+| 地址           |   说明                    |
+| ---------------| --------------------------|
+| 02010100        |  读取02010100(A相电压)      |
+
+参考DLT2007协议文档数据标识，可在插件源码中找到附件
+
+- 站号(可选)
+
+  当需要指定站号地址时可使用，举例：
+
+| 地址           |   说明                    |
+| ---------------| --------------------------|
+| s=111111111111;02010100        |  读取02010100 ,设备地址为111111111111      |
+
+- Dtu注册(可选)
+
+  当需要指定Dtu客户端可使用，举例：
+
+| 地址           |   说明                    |
+| ---------------| --------------------------|
+| id=12;40001         |  读取03功能码 ,设备地址为默认，Dtu注册包为"12",注意是UTF8格式        |
+
 
 3、其他方法
 
