--- a/doc/docs/20001.mdx
+++ b/doc/docs/20001.mdx
@@ -61,7 +61,7 @@ import Highlight from '@site/src/components/Highlight.js';
 
 ```
 
-`400001`是PLC Modbus的地址表示方式，代表保持寄存器地址0### 1、从站地址
+`400001`是PLC Modbus的地址表示方式，代表保持寄存器地址0
 
 - 基本地址
 
