--- a/doc/docs/30001.mdx
+++ b/doc/docs/30001.mdx
@@ -25,6 +25,11 @@ import Highlight from '@site/src/components/Highlight.js';
 线路路空闲或者数据传输结束，对于正逻辑的TTL电平，线路总是1。对于负逻辑(如RS-232电平)则相反。
 
 
-单看文字很难理解具体含义，所以我们看图说话，下面这张串口示波器图
+单看文字很难理解具体含义，所以我们看图说话，下面这张串口示波器图清晰的表现出二进制的传输原理
 
 <img src={require("@site/static/img/docs/串口1.png").default} />
+
+
+如上图，可以看出2进制是 起始``1``、数据(右到左)``01010101``、停止``0``  ，那么解析出来的数据就是``0x55``
+
+看到这里，相信大家都对串口知识有了一定的理解，这些基础知识对于c#工程师看似没有必要，但可以让你的实际调试开发工作更加得心应手
