--- a/doc/docs/30001.mdx
+++ b/doc/docs/30001.mdx
@@ -13,17 +13,13 @@ import Highlight from '@site/src/components/Highlight.js';
 下面每个名称做一个简单的解释。   
 
 ``波特率``是指串口通信中每秒传输的二进制位数
-
-``起始位``是1位时间、值为0的位，所以对于正逻辑的TTL电平，起始位是低电平；起始位代表着数据传输开始。      
-
+``起始位``是1位时间、值为0的位。      
 ``数据位``通常可能为1位、1.5位、2位时间。          
-
 ``校验位``是1位时间，根据校验方式确定验证值，比如奇校验时，计算数据位中的值为1的个数，如果是奇数，则为1，否则应为0      
+``停止位``通常可能为1位、1.5位、2位时间。停止位是值为1的位。停止位代表着数据传输结束。     
 
-``停止位``通常可能为1位、1.5位、2位时间。停止位是值为1的位，所以对于正逻辑的TTL电平，停止位是高电平。停止位代表着数据传输结束。     
-
-线路路空闲或者数据传输结束，对于正逻辑的TTL电平，线路总是1。对于负逻辑(如RS-232电平)则相反。
-
+线路路空闲或者数据传输结束时，值总是1。   
+对于正逻辑的TTL电平，值为1是高电平，对于负逻辑(如RS-232电平)则相反。
 
 单看文字很难理解具体含义，所以我们看图说话，下面这张串口示波器图清晰的表现出二进制的传输原理
 
