--- a/src/adapter/ThingsGateway.Plugin.TDengineDB/Locales/zh-CN.json
+++ b/src/adapter/ThingsGateway.Plugin.TDengineDB/Locales/zh-CN.json
@@ -8,5 +8,15 @@
     "QueueMaxCount": "内存队列最大数量",
     "SplitSize": "上传每页条数",
     "CacheEnable": "启用缓存"
+  },
+  "ThingsGateway.Plugin.TDengineDB.TDengineDBHistoryValue": {
+    "Id": "变量Id",
+
+    "CollectTime": "采集时间",
+    "CreateTime": "上传时间",
+    "DeviceName": "设备名称",
+    "Name": "变量名称",
+    "IsOnline": "是否在线",
+    "Value": "变量值"
   }
 }
