--- a/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.SqlHisAlarm/Locales/en-US.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ThingsGateway.Plugin.SqlDB.SqlDBProducerProperty": {
+  "ThingsGateway.Plugin.SqlHisAlarm.SQLHisAlarmProperty": {
     "DbType": "DbType",
     "BigTextConnectStr": "ConnectString",
 
