--- a/src/adapter/ThingsGateway.Plugin.OpcDa/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Plugin.OpcDa/Locales/en-US.json
@@ -1,6 +1,19 @@
 ﻿{
-  "ThingsGateway.Plugin.OpcDa.OpcDaImportVariable": {
-    "NoVariablesAvailable": "No variables available",
-    "Success": "Success"
+
+  "ThingsGateway.Plugin.OpcDa.OpcDaMasterProperty": {
+    "ActiveSubscribe": "ActiveSubscribe",
+    "CheckRate": "CheckRate(min)",
+    "DeadBand": "DeadBand",
+    "GroupSize": "GroupSize",
+    "OpcIP": "OpcIP",
+    "OpcName": "OpcName",
+    "UpdateRate": "UpdateRate",
+    "SourceTimestampEnable": "SourceTimestampEnable"
+  },
+
+
+    "ThingsGateway.Plugin.OpcDa.OpcDaImportVariable": {
+      "NoVariablesAvailable": "No variables available",
+      "Success": "Success"
+    }
   }
-}
