--- a/src/adapter/ThingsGateway.Foundation.OpcDa/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Foundation.OpcDa/Locales/en-US.json
@@ -1,9 +1,22 @@
 ﻿{
-  "ThingsGateway.Foundation.OpcDa.OpcDaMaster": {
+  "ThingsGateway.Foundation.OpcDa.OpcDaProperty": {
+    "ActiveSubscribe": "ActiveSubscribe",
+    "CheckRate": "CheckRate(min)",
+    "DeadBand": "DeadBand",
+    "GroupSize": "GroupSize",
+    "OpcIP": "OpcIP",
+    "OpcName": "OpcName",
+    "UpdateRate": "UpdateRate",
 
+    "Connect": "Connect",
+    "Disconnect": "Disconnect",
+    "Add": "Add",
+    "Remove": "Remove",
+    "Read": "Read",
+    "Write": "Write",
+    "ShowImport": "View OPC space"
   },
 
   "ThingsGateway.Foundation.OpcDa.OpcDaResource": {
-
   }
 }
