--- a/src/adapter/ThingsGateway.Foundation.OpcDa/Locales/zh-CN.json
+++ b/src/adapter/ThingsGateway.Foundation.OpcDa/Locales/zh-CN.json
@@ -1,9 +1,23 @@
 ﻿{
-  "ThingsGateway.Foundation.OpcDa.OpcDaMaster": {
+  "ThingsGateway.Foundation.OpcDa.OpcDaProperty": {
+    "ActiveSubscribe": "订阅",
+    "CheckRate": "心跳间隔(min)",
+    "DeadBand": "死区",
+    "GroupSize": "最大组大小",
+    "OpcIP": "OpcIP",
+    "OpcName": "OpcName",
+    "UpdateRate": "订阅推送间隔",
 
+
+    "Connect": "连接",
+    "Disconnect": "断开",
+    "Add": "添加",
+    "Remove": "移除",
+    "Read": "读取",
+    "Write": "写入",
+    "ShowImport": "查看OPC空间"
   },
 
   "ThingsGateway.Foundation.OpcDa.OpcDaResource": {
-
   }
 }
