--- a/src/adapter/ThingsGateway.Plugin.OpcDa/Locales/zh-CN.json
+++ b/src/adapter/ThingsGateway.Plugin.OpcDa/Locales/zh-CN.json
@@ -1,6 +1,16 @@
 ﻿{
-    "ThingsGateway.Plugin.OpcDa.OpcDaImportVariable": {
-      "NoVariablesAvailable": "无可用变量",
-      "Success": "成功"
-    }
+  "ThingsGateway.Plugin.OpcDa.OpcDaMasterProperty": {
+    "ActiveSubscribe": "订阅",
+    "CheckRate": "心跳间隔(min)",
+    "DeadBand": "死区",
+    "GroupSize": "最大组大小",
+    "OpcIP": "OpcIP",
+    "OpcName": "OpcName",
+    "UpdateRate": "订阅推送间隔",
+    "SourceTimestampEnable": "服务端时间戳"
+  },
+  "ThingsGateway.Plugin.OpcDa.OpcDaImportVariable": {
+    "NoVariablesAvailable": "无可用变量",
+    "Success": "成功"
+  }
 }
