--- a/src/adapter/ThingsGateway.Foundation.OpcDa/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Foundation.OpcDa/Locales/en-US.json
@@ -14,7 +14,9 @@
     "Remove": "Remove",
     "Read": "Read",
     "Write": "Write",
-    "ShowImport": "View OPC space"
+    "ShowImport": "View OPC space",
+    "RegisterAddress": "RegisterAddress",
+    "WriteValue": "WriteValue"
   },
 
   "ThingsGateway.Foundation.OpcDa.OpcDaResource": {
