--- a/src/adapter/ThingsGateway.Foundation.OpcDa/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Foundation.OpcDa/Locales/en-US.json
@@ -16,7 +16,13 @@
     "Write": "Write",
     "ShowImport": "View OPC space",
     "RegisterAddress": "RegisterAddress",
-    "WriteValue": "WriteValue"
+    "WriteValue": "WriteValue",
+
+    "NoVariablesAvailable": "No variables available",
+    "Success": "Success",
+    "Close": "Close",
+    "Save": "Import to system",
+    "Export": "Export"
   },
 
   "ThingsGateway.Foundation.OpcDa.OpcDaResource": {
