--- a/src/adapter/ThingsGateway.Foundation.OpcUa/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Foundation.OpcUa/Locales/en-US.json
@@ -12,7 +12,6 @@
     "UseSecurity": "IsUseSecurity",
     "LoadType": "LoadType",
 
-
     "Connect": "Connect",
     "Disconnect": "Disconnect",
     "Add": "Add",
@@ -21,10 +20,15 @@
     "Write": "Write",
     "ShowImport": "View OPC space",
     "RegisterAddress": "RegisterAddress",
-    "WriteValue": "WriteValue"
+    "WriteValue": "WriteValue",
+
+    "NoVariablesAvailable": "No variables available",
+    "Success": "Success",
+    "Close": "Close",
+    "Save": "Import to system",
+    "Export": "Export"
   },
 
   "ThingsGateway.Foundation.OpcUa.OpcUaResource": {
-
   }
 }
