--- a/src/adapter/ThingsGateway.Foundation.OpcUa/Locales/en-US.json
+++ b/src/adapter/ThingsGateway.Foundation.OpcUa/Locales/en-US.json
@@ -26,7 +26,8 @@
     "Success": "Success",
     "Close": "Close",
     "Save": "Import to system",
-    "Export": "Export"
+    "Export": "Export",
+    "ShowSubvariable": "ShowSubvariable"
   },
 
   "ThingsGateway.Foundation.OpcUa.OpcUaResource": {
